--- a/src/app/books/components/data-table/create-entity/create-entity.component.html
+++ b/src/app/books/components/data-table/create-entity/create-entity.component.html
@@ -38,20 +38,13 @@
             Formato no válido.
           </small>
         </div>
-            
       </div>
 
       <p-footer>
         <div class="d-flex justify-content-between align-items-center w-100" style="gap: 10px; padding: 0 20px;">
-          <!-- Botón Cancelar -->
-          <button type="button" pButton [label]="cancelLabel" icon="pi pi-times" (click)="cancel()"
-            class="p-button-danger p-button-raised p-button-rounded p-button-sm flex-fill">
-          </button>
-
-          <!-- Botón Guardar -->
-          <button type="submit" pButton [label]="submitLabel" icon="pi pi-check" [disabled]="entityForm.invalid"
-            class="p-button-success p-button-raised p-button-rounded p-button-sm flex-fill">
-          </button>
+          <p-button [label]="cancelLabel" severity="danger" type="button" (click)="cancel()" icon="pi pi-times" />
+          <p-button severity="success" [label]="submitLabel" type="submit" icon="pi pi-check"
+            [disabled]="entityForm.invalid || isSaving" [loading]="isSaving" />
         </div>
       </p-footer>
     </form>
