refactor: clean code

--- a/src/app/books/components/data-table/delete-entity/delete-entity.component.html
+++ b/src/app/books/components/data-table/delete-entity/delete-entity.component.html
@@ -2,7 +2,7 @@
   [style]="{ width: '400px' }">
 
   <div *ngIf="itemToDelete" class="modal-body">
-    ¿Desea eliminar el registro <strong>{{ itemToDelete.title }}</strong> con ID <strong>{{ itemToDelete.id }}</strong>?
+    ¿Desea eliminar el registro <strong>{{ itemToDelete.title }}</strong> con id <strong>{{ itemToDelete.id }}</strong>?
   </div>
 
   <p-footer>
