feat: edit modal

--- a/src/app/books/components/data-table/create-entity/create-entity.component.html
+++ b/src/app/books/components/data-table/create-entity/create-entity.component.html
@@ -1,4 +1,4 @@
-<p-dialog [(visible)]="visible" [modal]="true" [closable]="false" [responsive]="true" [style]="{ width: '400px' }">
+<p-dialog [(visible)]="visible" [modal]="true" [closable]="false" [style]="{ width: '400px' }">
   <div *ngIf="entity">
     <h3 class="text-center">{{ formTitle }}</h3>
 
@@ -8,11 +8,11 @@
 
         <!-- Condición para mostrar un input o un select -->
         <ng-container *ngIf="field.type !== 'select'; else selectField">
-          <input 
-            id="{{ field.field }}" 
-            formControlName="{{ field.field }}" 
+          <input
+            id="{{ field.field }}"
+            formControlName="{{ field.field }}"
             [type]="field.type"
-            class="form-control mb-3" 
+            class="form-control mb-3"
             [placeholder]="'Ingresa ' + field.label"
             [attr.maxlength]="field.field === 'isbn' ? 13 : null"
             [attr.aria-describedby]="field.field + '-error'"
