--- a/src/app/books/components/data-table/delete-entity/delete-entity.component.html
+++ b/src/app/books/components/data-table/delete-entity/delete-entity.component.html
@@ -1,4 +1,4 @@
-<p-dialog header="Eliminar registro" [(visible)]="visible" [modal]="true" [closable]="false" [responsive]="true"
+<p-dialog header="Eliminar registro" [(visible)]="visible" [modal]="true" [closable]="false"
   [style]="{ width: '400px' }">
 
   <div *ngIf="itemToDelete" class="modal-body">
