--- a/src/app/books/components/data-table/edit-entity/edit-entity.component.html
+++ b/src/app/books/components/data-table/edit-entity/edit-entity.component.html
@@ -1,4 +1,4 @@
-<p-dialog header="Editar registro" [(visible)]="visible" [modal]="true" [closable]="false" [responsive]="true"
+<p-dialog header="Editar registro" [(visible)]="visible" [modal]="true" [closable]="false"
   [style]="{ width: '400px' }">
 
   <div *ngIf="itemToEdit" class="modal-body">
