feat: edit entity form

--- a/src/app/books/components/data-table/data-table.component.html
+++ b/src/app/books/components/data-table/data-table.component.html
@@ -52,5 +52,5 @@
 <app-delete-entity [visible]="displayDeleteModal" [itemToDelete]="itemToDelete"
   (confirmDeletion)="onConfirmDeletion($event)"></app-delete-entity>
 <!-- Modal de Confirmación de Eliminación -->
-<app-edit-entity [visible]="displayEditModal" [itemToEdit]="itemToEdit"
+<app-edit-entity [visible]="displayEditModal" [entityFields]="entityFields" [itemToEdit]="itemToEdit"
   (confirmEdition)="onConfirmEdition($event)"></app-edit-entity>
