--- a/src/app/books/pages/list-page/list-page.component.html
+++ b/src/app/books/pages/list-page/list-page.component.html
@@ -7,7 +7,9 @@
 </app-create-entity>
 
 <!-- DataTable -->
-<app-data-table [data]="books" [columns]="columns" [pageIndex]="pageIndex" [pageSize]="pageSize"
+<app-data-table
+[authorOptions]="authors"
+[data]="books" [columns]="columns" [pageIndex]="pageIndex" [pageSize]="pageSize"
   [totalPages]="totalPages" [filterText]="filterText" (pageChange)="onPageChange($event)"
   (pageSizeChange)="onPageSizeChange($event)" (filterChange)="onFilterChange($event)"
   [entityFields]="entityFields"
