refactor: edit item

--- a/src/app/books/components/data-table/data-table.component.html
+++ b/src/app/books/components/data-table/data-table.component.html
@@ -66,5 +66,5 @@
 
 <!-- Modal de Confirmación de Eliminación -->
 <app-edit-entity [authorOptions]="authorOptions"
-[visible]="displayEditModal" [entityFields]="entityFields" [itemToEdit]="itemToEdit"
+[visible]="displayEditModal" [entityFields]="entityFields" [itemToEdit]="itemToEdit" (editItem)="onEditItem($event)"
   (confirmEdition)="onConfirmEdition($event)"></app-edit-entity>
