--- a/src/app/books/pages/list-page/list-page.component.html
+++ b/src/app/books/pages/list-page/list-page.component.html
@@ -1,5 +1,5 @@
-<div class="d-flex justify-content-end mb-4">
-  <button class="btn btn-outline-success btn-lg" (click)="onCreate()">Crear Libro</button>
+<div class="d-flex justify-content-end mb-4 me-4 mt-4">
+  <p-button label="Crear libro" severity="success" (onClick)="onCreate()" icon="pi pi-plus" />
 </div>
 
 <!-- Modal de Creación de Libro -->
