--- a/src/styles.css
+++ b/src/styles.css
@@ -7,4 +7,4 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .spacer {
   flex: 1 1 auto;
 }
-@import "~bootstrap-icons/font/bootstrap-icons.css";
+@import "primeicons/primeicons.css";
